[package]
name = "wordlehelper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1 # for profiling: https://nnethercote.github.io/perf-book/profiling.html

[dependencies]
bitvec = "1.0.1"
pancurses = "0.17"
rand = "0.8.5"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
